--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,7 @@
 #!/bin/sh
 FROM python:3.9-slim-buster
 
-WORKDIR /third
+WORKDIR /third/app
 
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
