--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
 
     location / {
-        proxy_pass http://flask_app:3000/;
+        proxy_pass http://flask:3000/;
         proxy_set_header Host "localhost";
     }
 }
