--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,28 @@
-version: "3.8"
+version: "3"
 
 services:
-  # nginx:
-  #   image: nginx:latest
-  #   container_name: nginx
-  #   depends_on:
-  #     - flask
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf
-  #   ports:
-  #     - 80:80
-  #   networks:
-  #     - wehelp_third_network
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    depends_on:
+      - flask
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "80:80"
+    networks:
+      - wehelp_third_network
 
   flask:
     build: ./app
     container_name: flask
+    ports:
+      - "3000:3000"
     networks:
       - wehelp_third_network
 
-
 networks:
   wehelp_third_network:
+    external: true
+
+
