--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,21 @@
 version: "3"
 
 services:
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    depends_on:
-      - flask
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    ports:
-      - "80:80"
-    networks:
-      - wehelp_third_network
-
   flask:
     build: ./app
     container_name: flask
     ports:
       - "3000:3000"
+    networks:
+      - wehelp_third_network
+
+  nginx:
+    build: ./nginx
+    container_name: nginx
+    depends_on:
+      - flask
+    ports:
+      - "80:80"
     networks:
       - wehelp_third_network
 
