--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,3 +7,11 @@ server {
         proxy_set_header Host "localhost";
     }
 }
+
+server{
+    listen 443 ssl;
+    server_name localhost;
+
+    ssl_certificate ~/alicethirteen.com/bundle.crt;
+    ssl_certificate_key ~/alicethirteen.com/private.key;
+}
