Fixed errors in nginx setting.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,16 +2,18 @@ server {
     listen 80;
     server_name localhost;
 
-    location / {
-        proxy_pass http://flask:3000/;
-        proxy_set_header Host "localhost";
-    }
+    return 301 https://$host$request_uri;
 }
 
 server{
     listen 443 ssl;
     server_name localhost;
 
-    ssl_certificate ~/alicethirteen.com/bundle.crt;
-    ssl_certificate_key ~/alicethirteen.com/private.key;
+    ssl_certificate nginx.crt;
+    ssl_certificate_key nginx.key;
+
+    location / {
+        proxy_pass http://flask:3000/;
+        proxy_set_header Host "localhost";
+    }
 }
