--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,3 +3,6 @@ FROM nginx
 RUN rm /etc/nginx/conf.d/default.conf
 
 COPY nginx.conf /etc/nginx/conf.d/
+
+COPY nginx.crt /etc/nginx/nginx.crt
+COPY nginx.key /etc/nginx/nginx.key
