--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,5 +4,5 @@ RUN rm /etc/nginx/conf.d/default.conf
 
 COPY nginx.conf /etc/nginx/conf.d/
 
-COPY nginx.crt /etc/nginx/nginx.crt
-COPY nginx.key /etc/nginx/nginx.key
+# COPY nginx.crt /etc/nginx/nginx.crt
+# COPY nginx.key /etc/nginx/nginx.key
