--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    listen [::]:80;
     server_name localhost;
 
     return 301 https://$host$request_uri;
@@ -7,10 +8,11 @@ server {
 
 server{
     listen 443 ssl;
+    listen [::]:443 ssl;
     server_name localhost;
 
-    ssl_certificate nginx.crt;
-    ssl_certificate_key nginx.key;
+    ssl_certificate ${NGINX_HOST_SSL_CRT};
+    ssl_certificate_key ${NGINX_HOST_SSL_KEY};
 
     location / {
         proxy_pass http://flask:3000/;
