--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,8 +11,8 @@ server{
     listen [::]:443 ssl;
     server_name localhost;
 
-    ssl_certificate ${NGINX_HOST_SSL_CRT};
-    ssl_certificate_key ${NGINX_HOST_SSL_KEY};
+    ssl_certificate /etc/nginx/nginx.crt;
+    ssl_certificate_key /etc/nginx/nginx.key;
 
     location / {
         proxy_pass http://flask:3000/;
